src/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-size: 14px;
    font-family: 'Roboto', sans-serif;
    height: 100vh;
    width: 100%;
    /* padding: 2rem; */
}

.event-container{
    height: 100vh;
    width: 100%;
    padding: 2rem;
}

.menu {
    position: fixed;
    z-index: 1000;
    width: 150px;
    background: #1b1a1a;
    border-radius: 5px;
    display: none;
    list-style: none;
}

.menu.open {
    display: block;
}

.menu .menu-item {
    padding: 8px 10px;
    font-size: 1rem;
    color: #eee;
    cursor: pointer;
    transition: background-color .2s ease-in;
    border-radius: inherit;
}

.menu .menu-item:hover {
    background: #343434;
}

.timer-window {
    padding: 20px;
    display: flex;
    position: fixed;
    border-radius: 5px;
}

.timer-text{
    color: #5776b9;
    align-items: center;
    margin: 0 auto;
    font-size: 5rem;
}

.image-meme{
    position: relative;
    left: 50%;
    display: block;
}

.hidden{
    display: none;
}

.weather-block {
    font-family: 'Montserrat', sans-serif;
    width: 260px;
    background-color: rgb(255, 255, 255);
    box-shadow: 2px 2px 15px 1px rgb(220, 220, 220);
    border-radius: 15px;
    padding: 40px 40px;
    margin: 0 auto;
    margin-bottom: 20px;
}

.icon_and_temp_block {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 2.5em;
    font-weight: 100;
}

.weather_icon {
    width: 100px;
    height: 102.67px;
}

